# trit-file-transfer

./: .gitignore  CMakeLists.txt  LICENSE  NOTICES  README.md
include/: BoundedThreadSafeQueue.h  Chunk.h  CompressionManager.h  EncryptionManager.h  FileManager.h  ProgressTracker.h  Receiver.h  Sender.h  TcpSocket.h  TransferManager.h  TransferRequest.h  WorkerContext.h  crypto.h  staging.h  utils.h
src/: BoundedThreadSafeQueue.h  Chunk.cpp  Chunk.h  CompressionManager.cpp  EncryptionManager.cpp  FileChunk.cpp  FileChunk.h  FileChunker.cpp  FileChunker.h  FileManager.cpp  FileWriter.cpp  FileWriter.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  StagingArea.cpp  StagingArea.h  TcpSocket.cpp  Transfer.cpp  Transfer.h  TransferManager.cpp  TransferRequest.cpp  TransferRequest.h  WorkerContext.cpp  crypto.cpp  logger.cpp  logger.h  main.cpp  staging.cpp  utils.cpp  utils.h
